--- a/source/index.html
+++ b/source/index.html
@@ -26,51 +26,9 @@
     <section class="store">
       <section class="store__products products">
         <ul class="products__list">
-          <li class="products__item">
-            <div class="products__img">
-              <img src="img/img1.jpg" width="150" height="150" alt="Наименование товара">
-            </div>
-            <div class="products__description">
-              <h3 class="products__title">Стул_1</h3>
-              <p class="products__price">300 рублей</p>
-              <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis neque aut provident id debitis quisquam itaque alias, adipisci quidem, amet maiores, rerum.</p>
-            </div>
-            <div class="products__add add">
-              <button class="add__btn btn" type="button">Добавить в корзину</button>
-              <p class="add__message">Добавлено: <span class="add__message--count">5 товаров</span></p>
-            </div>
-          </li>
-          <li class="products__item">
-            <div class="products__img">
-              <img src="img/img1.jpg" width="150" height="150" alt="Наименование товара">
-            </div>
-            <div class="products__description">
-              <h3 class="products__title">Стул_2</h3>
-              <p class="products__price">400 рублей</p>
-              <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ea a quia ducimus veniam accusamus perferendis sapiente quo itaque, unde nulla.</p>
-            </div>
-            <div class="products__add add">
-              <button class="add__btn btn" type="button">Добавить в корзину</button>
-              <p class="add__message">Добавлено: <span class="add__message--count">5 товаров</span></p>
-            </div>
-          </li>
-          <li class="products__item">
-            <div class="products__img">
-              <img src="img/img1.jpg" width="150" height="150" alt="Наименование товара">
-            </div>
-            <div class="products__description">
-              <h3 class="products__title">Стул_3</h3>
-              <p class="products__price">500 рублей</p>
-              <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione beatae dolorem placeat, cumque illo.</p>
-            </div>
-            <div class="products__add add">
-              <button class="add__btn btn" type="button">Добавить в корзину</button>
-              <p class="add__message">Добавлено: <span class="add__message--count">5 товаров</span></p>
-            </div>
-          </li>
         </ul>
         <div class="products__pagination pagination">
-          <button class="pagination__btn" type="button"><</button>
+          <button class="pagination__btn pagination__btn--prev" type="button"><</button>
           <ul class="pagination__list">
             <li class="pagination__item">
               <a class="pagination__link pagination__link--active" href="">1</a>
@@ -83,10 +41,10 @@
             </li>
             <li class="pagination__item pagination__item--hide">...</li>
             <li class="pagination__item">
-              <a class="pagination__link" href="">14</a>
+              <a class="pagination__link pagination__link--last" href="">200</a>
             </li>
           </ul>
-          <button class="pagination__btn" type="button">></button>
+          <button class="pagination__btn pagination__btn--next" type="button">></button>
         </div>
       </section>
       <section class="store__basket basket">
@@ -114,6 +72,32 @@
       </section>
     </section>
   </main>
+  <template id="product">
+    <li class="products__item">
+      <div class="products__img">
+        <img src="img/img1.jpg" width="150" height="150" alt="Наименование товара">
+      </div>
+      <div class="products__description">
+        <h3 class="products__title">Стул_1</h3>
+        <p class="products__price">300 рублей</p>
+        <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis neque aut provident id debitis quisquam itaque alias, adipisci quidem, amet maiores, rerum.</p>
+      </div>
+      <div class="products__add add">
+        <button class="add__btn btn" type="button">Добавить в корзину</button>
+        <p class="add__message">Добавлено: <span class="add__message--count">0 товаров</span></p>
+      </div>
+    </li>
+  </template>
+  <template id="basket-item">
+    <li class="basket__item">
+      <div>
+        <img src="img/img1.jpg" width="30" height="30" alt="Наименование товара">
+      </div>
+      <p class="basket__title">Стул_1</p>
+      <p class="basket__count">x3</p>
+      <button class="basket__item-del" type="button">x</button>
+    </li>
+  </template>
   <script src="js/store.js"></script>
 </body>
 </html>
