добавление в корзину, подсчет суммы

--- a/source/index.html
+++ b/source/index.html
@@ -48,26 +48,10 @@
         </div>
       </section>
       <section class="store__basket basket">
-        <ul class="basket__list">
-          <li class="basket__item">
-            <div>
-              <img src="img/img1.jpg" width="30" height="30" alt="Наименование товара">
-            </div>
-            <p class="basket__title">Стул_1</p>
-            <p class="basket__count">x2</p>
-            <button class="basket__item-del" type="button">x</button>
-          </li>
-          <li class="basket__item">
-            <div>
-              <img src="img/img1.jpg" width="30" height="30" alt="Наименование товара">
-            </div>
-            <p class="basket__title">Стул_1</p>
-            <p class="basket__count">x3</p>
-            <button class="basket__item-del" type="button">x</button>
-          </li>
-        </ul>
+        <p class="basket__empty">Корзина пуста</p>
+        <ul class="basket__list"></ul>
         <p class="basket__total">Итог</p>
-        <p class="basket__sum">300 рублей</p>
+        <p class="basket__sum"><b>0</b> рублей</p>
         <a class="basket__btn btn" href="">Заказать</a>
       </section>
     </section>
@@ -79,7 +63,7 @@
       </div>
       <div class="products__description">
         <h3 class="products__title">Стул_1</h3>
-        <p class="products__price">300 рублей</p>
+        <p class="products__price"><span>300</span> рублей</p>
         <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis neque aut provident id debitis quisquam itaque alias, adipisci quidem, amet maiores, rerum.</p>
       </div>
       <div class="products__add add">
