изменение оказа страниц, сброс счетчика, удаление из корзины

--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="products__add add">
         <button class="add__btn btn" type="button">Добавить в корзину</button>
-        <p class="add__message">Добавлено: <span class="add__message--count">0 товаров</span></p>
+        <p class="add__message">Добавлено: <span class="add__message--count"><span>0</span> товаров</span></p>
       </div>
     </li>
   </template>
