--- a/source/index.html
+++ b/source/index.html
@@ -78,7 +78,7 @@
         <img src="img/img1.jpg" width="30" height="30" alt="Наименование товара">
       </div>
       <p class="basket__title">Стул_1</p>
-      <p class="basket__count">x3</p>
+      <p class="basket__count">x<span>3</span></p>
       <button class="basket__item-del" type="button">x</button>
     </li>
   </template>
