--- a/source/index.html
+++ b/source/index.html
@@ -10,15 +10,15 @@
 <body>
   <main>
     <section class="filter">
-      <button class="filter__btn filter__btn--active filter__btn--up btn" type="button">
+      <button class="filter__btn filter__btn--name btn" type="button">
         <span>По названию</span>
         <svg height="15" viewBox="0 0 128 128" width="15" xmlns="http://www.w3.org/2000/svg"><g fill="none" stroke-width="12" stroke-linecap="square" stroke-miterlimit="10"><path d="M111 40.5l-47 47M64 87.5l-47-47"/></g></svg>
       </button>
-      <button class="filter__btn btn" type="button">
+      <button class="filter__btn filter__btn--price btn" type="button">
         <span>По цене</span>
         <svg height="15" viewBox="0 0 128 128" width="15" xmlns="http://www.w3.org/2000/svg"><g fill="none" stroke-width="12" stroke-linecap="square" stroke-miterlimit="10"><path d="M111 40.5l-47 47M64 87.5l-47-47"/></g></svg>
       </button>
-      <button class="filter__btn btn" type="button">
+      <button class="filter__btn filter__btn--available btn" type="button">
         <span>По наличию</span>
         <svg height="15" viewBox="0 0 128 128" width="15" xmlns="http://www.w3.org/2000/svg"><g fill="none" stroke-width="12" stroke-linecap="square" stroke-miterlimit="10"><path d="M111 40.5l-47 47M64 87.5l-47-47"/></g></svg>
       </button>
